test/trivial/deitz/test_use_before_def1.good
Error: Variable 'x' used before defined (test_use_before_def1.chpl:1)
